@@ -5,6 +5,8 @@ python-debian (0.1.16) UNRELEASED; urgency=low
       NotImplementedError on any initialization attempt
     - test_debian_support.py now doesn't try to test AptPkgVersion if
       apt_pkg is not availble
+  * test_deb822.py: Don't test gpg info if debian-keyring is not
+    available (Closes: #573934)
 
  -- John Wright <jsw@debian.org>  Sun, 14 Mar 2010 05:31:54 -0600
 
